# parallel-build

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
parallel_build/: build.py  build_cli.py  build_step.py  check.py  check_cli.py  cli.py  command.py  config.py  config_cli.py  exceptions.py  logger.py  main.py  post_build.py  source.py  temp.py  unity_builder.py  unity_hub.py  utils.py
parallel_build/cli/: build.py  check.py  config.py  main.py
parallel_build/gui/: build_dialog.py  build_thread.py  cli.py  elided_label.py  gui.py  main.py  new_project_dialog.py  project_dialogs.py  select_path.py
