[tool.poetry]
name = "parallel-build"
version = "0.1.0"
description = ""
authors = ["Matteo Silvestro <matteosilvestro@live.it>"]
readme = "README.md"
packages = [{ include = "parallel_build" }]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
chime = "^0.7.0"
platformdirs = "^3.8.1"
pydantic = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
