[tool.poetry]
name = "parallel-build"
version = "0.1.0"
description = ""
authors = ["Matteo Silvestro <matteosilvestro@live.it>"]
readme = "README.md"
packages = [{ include = "parallel_build" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyyaml = "^6.0"
pydantic = "^2.0.2"
click = "^8.1.5"
pyside6-essentials = "^6.5.1.1"

[tool.poetry.scripts]
parallelbuild = "parallel_build.cli:cli"
parallelbuild-gui = "parallel_build.gui.main:show_gui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
